--- a/options.html
+++ b/options.html
@@ -21,7 +21,8 @@
 	<body>
 		<div class="container">
 			<div class="list-container">
-				<h1>Blacklist</h1>
+				<span class="header">Blacklist</span><br />
+				<span class="subhead">FilteReddit will filter out posts with these words in them.</span>
 				<ul id="blacklist" class="list">
 					<!-- List items are inserted here by options.js -->
 				</ul>
